<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroupOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_os"/>

        <RadioButton
            android:id="@+id/radioWindows"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioWindows"/>

        <RadioButton
            android:id="@+id/radioLinux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioLinux"/>

        <RadioButton
            android:id="@+id/radioMac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioOSx"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_run"
        android:id="@+id/button"
        android:layout_below="@+id/button_browse"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_browse_files"
        android:id="@+id/button_browse"
        android:layout_below="@+id/text_selected_script"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_script"
        android:id="@+id/text_selected_script"
        android:layout_below="@id/radioGroupOS"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
